--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "cz-customizable": "^7.4.0",
     "eslint": "^9.14.0",
     "globals": "^15.14.0",
